@@ -1,3 +1,5 @@
+- bootloader:
+  o dont override 'splash' and/or 'quiet' when adding 'noiswmd' (mga#15666)
 - partitioning_wizard:
   o use the windows partition with the most available space on current
     disk, not the last one across all disks (mga#15589)
